# sensor-core

./: CMakeLists.txt  CMakePresets.json  README.md  toolchain.yml  vcpkg.json.in
.github/instructions/: cpp.instructions.md
.github/workflows/: test.yml
cmake/: CreatePackage.cmake  EnableVcpkg.cmake
config/: config.yaml
contracts/: openapi.yaml
contracts/proto/: CMakeLists.txt  core_service.proto
docs/: class_diagram.puml  sequence_diagram.puml
proto/: CMakeLists.txt  camera_service.proto  core_service.proto  video_service.proto
scripts/: build.sh
src/api/: ApiController.cpp  ApiController.h  ApiControllerFactory.cpp  ApiControllerFactory.h  GrpcCallbackHandler.cpp  GrpcCallbackHandler.h  GrpcTransport.cpp  GrpcTransport.h  IRequestHandler.h  ITransport.h  RequestHandler.cpp  RequestHandler.h
src/api/grpc/: GrpcCallbackHandler.cpp  GrpcCallbackHandler.h  GrpcTransport.cpp  GrpcTransport.h
src/api/rest/: RestTransport.cpp  RestTransport.h
src/app/: Application.cpp  Application.h  main.cpp
src/common/config/: ConfigManager.cpp  ConfigManager.h
src/common/logger/: Logger.h  LoggerInterface.h  SpdLogAdapter.h
src/common/network/: NetworkUtils.cpp  NetworkUtils.h
src/common/types/: CameraCapabilities.h  CameraTypes.h  Result.h
src/core/: Core.cpp  Core.h  CoreFactory.cpp  CoreFactory.h  ICore.h
src/infrastructure/camera/: CameraFactory.cpp  CameraFactory.h
src/infrastructure/camera/devices/: AdimecCamera.cpp  AdimecCamera.h  FakeAdvancedCamera.cpp  FakeAdvancedCamera.h  FakeSimpleCamera.cpp  FakeSimpleCamera.h  MwirCamera.cpp  MwirCamera.h  SonyCamera.cpp  SonyCamera.h
src/infrastructure/camera/hal/: Camera.cpp  Camera.h  ICamera.h  ICameraHw.h
src/infrastructure/camera/protocol/genicam/: FpgaTransport.cpp  FpgaTransport.h  GenicamProtocol.cpp  GenicamProtocol.h  TMX5x.xml
src/infrastructure/camera/protocol/genicam/include/: _GenICamVersion.h
src/infrastructure/camera/protocol/genicam/include/Base/: GCArray.h  GCCompatibility.h  GCUtilities.h
src/infrastructure/camera/protocol/genicam/include/CLProtocol/: ISerial.h  ISerialAdapter.h
src/infrastructure/camera/protocol/genicam/include/GenApi/: ChunkAdapterUniversal.h  INode.h  NodeCallback.h  Persistence.h  SelectorState.h  Types.h
src/infrastructure/camera/protocol/genicam/include/Log/: CLog.h  ILoggerFactory.h
src/infrastructure/camera/protocol/itl/: ItlProtocol.cpp  ItlProtocol.h
src/infrastructure/camera/protocol/visca/: ViscaProtocol.cpp  ViscaProtocol.h
src/infrastructure/camera/transport/: ITransport.h
src/infrastructure/camera/transport/ethernet/: MwirOpcodes.h  TcpClient.cpp  TcpClient.h
src/infrastructure/camera/transport/mmio/: IRegisterImpl.h  RegisterImplUio.cpp  RegisterImplUio.h  RegistersMapManager.cpp  RegistersMapManager.h
src/infrastructure/camera/transport/uart/: FakeUart.cpp  FakeUart.h  Uart.cpp  Uart.h
src/infrastructure/clients/: CameraServiceClient.cpp  CameraServiceClient.h  GrpcClientManager.cpp  GrpcClientManager.h  ICameraServiceClient.h  IVideoServiceClient.h  InstanceRouter.h  VideoServiceClient.cpp  VideoServiceClient.h
src/infrastructure/fpga/: VideoChannel.cpp  VideoChannel.h
tests/: CMakeLists.txt  Mocks.h
tests/integration/: AdimecCameraTests.cpp  GrpcIntegrationTests.cpp  SonyCameraTests.cpp
tests/system/: ServiceSystemTests.cpp
tests/unit/: NetworkUtilsTest.cpp
tests/unit/api/: ApiControllerFactoryTests.cpp  ApiControllerTests.cpp  GrpcTransportTests.cpp  RequestHandlerTests.cpp
tests/unit/common/: CameraTypesTests.cpp  ConfigTests.cpp  LoggerTests.cpp  ResultTests.cpp  SpdLogAdapterTests.cpp
tests/unit/core/: CoreFactoryTests.cpp  CoreTests.cpp
tests/unit/data/: CameraFactoryTests.cpp  CameraTests.cpp
tests/unit/data/hw_interface/mmio/: RegisterMapManagerTest.cpp
utils/: GrpcClient.h
